--- a/TestProjects/VisualEffectGraph_LWRP/Packages/manifest.json
+++ b/TestProjects/VisualEffectGraph_LWRP/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
+	"com.unity.timeline": "1.2.0",
     "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
     "com.unity.render-pipelines.universal": "file:../../../com.unity.render-pipelines.universal",
     "com.unity.shadergraph": "file:../../../com.unity.shadergraph",
